mixed some minor issues on mobile -- header gap onfilter open, oprtfilio image max-width, attempted to target devices with media query .. did not work

--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -20,6 +20,13 @@ z-index: 100;
 // animation: header 1s linear;
 top:0;
 right: 0;
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 700px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+    display: static;
+  }
 }
 .body-wrap {
   height: 100%;
