--- a/scss/modules/_mobile-navigation.scss
+++ b/scss/modules/_mobile-navigation.scss
@@ -7,7 +7,7 @@
   right: 0;
   z-index: 100;
   visibility: hidden;
-  width: 110px;
+  width: $sidebar-width;
   height: 100%;
   background: #000;
   transition: all 0.5s;
